# eps-app-2-apreensao-inteligente

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
