[tool.poetry]
name = "apreensao-inteligente"
version = "0.1.0"
description = ""
authors = [
    "Carlos Eduardo Rodrigues <eduardokadu831@gmail.com>",
    "Patrícia Helena Macedo da Silva <patyhelena160@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.4"
ruff = "^0.15.8"
safety = "^3.7.0"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"